# dnn

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dnn/: blocks.h  layers.h  resnet.h  training.h  vgg.h
examples/: mnist_ex.cpp
mnist/: download_minist.sh
